--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,21 @@
-* {
-    /* background-image: url("https://cdn.pixabay.com/photo/2018/04/27/04/06/woman-3353711__340.jpg"); */
+body {
+    background-color: black;
+    color: white;
 }
 
-#intro-wrapper {
+#info-image {
+    background-image: url("../images/images\ \(1\)\ \(3\).jpeg");
+}
+
+#information {
     display: flex;
-    /* background-color: blue; */
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: space-between;
 }
 
-.intro-image img {
-    /* background-color: cyan; */
-    border-radius: 50%;
+.description {
+    padding: 2.9em 0;
 }
-
-.intro-info {
-    display: flex;
-    flex-direction: column;
-}
-
 
 @media screen and (max-width: 550px) {
     #intro-wrapper {
