--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .bg-cyber {
-    background-color: rgb(133, 255, 10);
+    background-color: rgb(131, 233, 29);
 }
 
 .bg-transparent {
@@ -13,6 +13,13 @@ body {
 .fg-dark {
     color: black;
 }
+
+
+.bg-primary-c {
+    background-color: rgb(38, 10, 64);
+    color: beige;
+}
+
 
 .fg-cyber {
 
@@ -68,6 +75,10 @@ body {
     color: red;
 }
 
+.project-container {
+    padding: 0 4em;
+}
+
 footer {
     display: flex;
     justify-content: space-between;
@@ -102,7 +113,14 @@ footer {
 
     }
 
-   
+
+}
+
+@media screen and (max-width: 578px) {
+    .project-container {
+        padding: 0 1em;
+        /* background-color: aqua; */
+    }
 }
 
 .footer-head a {
@@ -115,4 +133,17 @@ footer {
 
 .project-card {
     background-color: transparent;
+}
+
+.fg-light {
+    color: beige;
+}
+
+.fg-accent {
+    color: #816fbc;
+}
+
+.bg-accent {
+    background-color: #816fbc;
+    color: beige;
 }
